[package]
name = "percolator"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
prost = "0.11.6"
prost-derive = "0.11.6"

labrpc = { path = "./labrpc" }
labcodec = { path = "./labcodec" }

[build-dependencies]
prost-build = "0.11.6"

[dev-dependencies]
env_logger = "0.7"