[package]
name = "labrpc"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["thread-pool"] }
futures-timer = "3.0"
log = "0.4"
prost = "0.11.6"
rand = "0.7"

labcodec = { path = "../labcodec" }
prost-build = "0.11.6"
protoc = "2.28.0"

[dev-dependencies]
criterion = "0.3"
env_logger = "0.7"
prost-derive = "0.11.6"

[[bench]]
name = "rpc"
path = "benches/rpc.rs"
harness = false
